Fixed bug affecting align-flush in toolbars.

--- a/src/themes/ios/buttons.less
+++ b/src/themes/ios/buttons.less
@@ -73,7 +73,7 @@ nav > button {
   max-width: 100px;
 }
 
-button.align-flush
+button.align-flush,
 .toolbar > button.align-flush {
   position: absolute;
   right: 15px;
